--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,4 @@ services:
       - 5432:5432
     volumes:
       - ./postgres/data:/var/lib/postgresql
-      # - ./postgres/initdb:/docker-entrypoint-initdb.d
+      - ./postgres/initdb:/docker-entrypoint-initdb.d
