--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,30 @@
 version: '3.9'
 services:
+  nginx:
+    image: nginx:latest
+    container_name: 'nginx'
+    ports:
+      - 8080:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - php
+  php:
+    build:
+      context: .
+      dockerfile: ./php/Dockerfile
+    container_name: 'php'
+    volumes:
+      - ./www/html:/var/www/html
+    depends_on:
+      - db
   db:
     build:
       context: .
       dockerfile: ./postgres/Dockerfile
       args:
         DB_LANG: ja_JP
+    container_name: 'db'
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -13,5 +32,5 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./postgres/data:/var/lib/postgresql
+      - ./postgres:/var/lib/postgresql
       - ./postgres/initdb:/docker-entrypoint-initdb.d
